# pystlouisfed

./: .buildinfo  .gitignore  LICENSE  README.md  client.html  description.html  enums.html  genindex.html  index.html  install.html  models.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  strange.html
.doctrees/: client.doctree  description.doctree  enums.doctree  index.doctree  install.doctree  models.doctree  strange.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/pystlouisfed/: alfred.html  enums.html  fraser.html  fredmaps.html  models.html
_sources/: description.rst.txt  enums.rst.txt  strange.rst.txt
doc/: about.rst  client.rst  conf.py  description.rst  examples.rst  index.rst  install.rst  models.rst
docs/: client.html  enums.html  index.html  models.html
pystlouisfed/: __init__.py  alfred.py  client.py  enums.py  fraser.py  fredmaps.py  geofred.py  models.py
tests/: all.py  fred.py  fred_maps.py  geofred.py
tests/fixtures/: category.json  regional_data.json  release.json  series.json  series_data.json
tests/fixtures/maps/: regional_data.json  series_data.json  shape.json
