    [build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "pystlouisfed"
]

[project]
name = "pystlouisfed"
version = "3.0.0"
authors = [
    { name = "Tomas Koutek", email = "66636b6f6666@gmail.com" },
]
description = "Federal Reserve Bank of St. Louis - FRED, ALFRED, FRED Maps and FRASER."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["economics", "API", "financial", "FRED", "ALFRED", "FRASER", "FRED Maps", "stlouisfed", "trading", "algotrading"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>1.0.0",
    "geopandas",
    "requests",
    "rush",
    "sickle",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "build",
    "twine"
]

[project.urls]
"Documentation" = "https://tomaskoutek.github.io/pystlouisfed/"
"Source" = "https://github.com/TomasKoutek/pystlouisfed"
"Tracker" = "https://github.com/TomasKoutek/pystlouisfed/issues"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

# Same as Black.
line-length = 370
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = [
    "D", # Missing docstring
    "ANN101", # Missing type annotation for `self` in method
    "TD", # to be done
    "FIX002", # Line contains to be done, consider resolving the issue
    "W291", # Trailing whitespace
    "ERA001", # Found commented-out code
    "FBT", # Boolean-typed positional argument
    "PT009", # Use a regular `assert` instead of unittest-style `assertEqual`
    "COM812", # Trailing comma missing
    "S104", # Possible binding to all interfaces
    "SLF001", # Private member accessed: `_matcher`
    "EM101", # Exception must not use a string literal, assign to variable first
    "EM102", # Exception must not use an f-string literal, assign to variable first
    "G004", # Logging statement uses f-string
    "TRY003", # Avoid specifying long messages outside the exception class
    "PD901", # Avoid using the generic variable name `df` for DataFrames
    "PIE796", # Enum contains duplicate value
    "PGH004", # Use specific rule codes when using `noqa`
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]

exclude = ["*.pyi"]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
